gdk/wayland: Make cursor surface updates atomic after .enter

Once we did already set a pointer cursor through wl_pointer.set_cursor
(or tablet equivalent) on wl_pointer.enter, we will be reusing the
same surface, and only changing the buffer underneath.

In order to make updates atomic here, we need to use wl_surface.offset
to indicate the hotspot position, so that the update can happen
right at wl_surface.commit.

Closes: https://gitlab.gnome.org/GNOME/gtk/-/issues/7249